@@ -15,14 +15,10 @@
 
 external code : char -> int = "%identity"
         (* Return the ASCII code of the argument. *)
-external int_of_char : char -> int = "%identity"
-        (* Alias of the [code] function above. *)
 val chr: int -> char
         (* Return the character with the given ASCII code.
            Raise [Invalid_argument "Char.chr"] if the argument is
            outside the range 0--255. *)
-val char_of_int : int -> char
-        (* Alias of the [chr] function above. *)
 val escaped : char -> string
         (* Return a string representing the given character,
            with special characters escaped following the lexical conventions
